allowing JAVA_OPTS to override heap sizes